fixup! EditableLabel: Allow editing desktop icon names
Make sure to vertically center the icons of apps with the icons for
folders, which at the moment were misaligned: the app icons were
bottom-aligned with the folders' ones, instead of centered.

This should be squashed along with 94ee2a61 in future rebases.

--- a/data/theme/gnome-shell-sass/_endless.scss
+++ b/data/theme/gnome-shell-sass/_endless.scss
@@ -488,8 +488,12 @@ popup-separator-menu-item {
 }
 
 %overview-icon {
+    width: 118px;
+    height: 118px;
     icon-size: 64px;
-    spacing: 0px;
+    spacing: 4px;
+    padding-top: 12px;
+    padding-bottom: 0px;
     border-radius: 15px;
     font-weight: bold;
     text-align: center;
